---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2021-01-02
  Features:
    - Added crafter page, listing the recipes compatible with that crafter and the fuels it is compatible with
    - Added search by crafter
    - Added `burnable in` to material page, listing the crafters where it can be used as fuel
    - Added descriptions to object tooltips
    - Added fuel values to material tooltips
    - Added session history listing to the navigation button tooltips
    - Pressing enter while in the search textfield will switch search categories
    - When opening the GUI, the home page will be shown instead of the last viewed page (optional)
  Changes:
    - Updated the mod to the new flib `gui-beta` module
    - Removed per-player settings from the mod settings menu - use the mod's built-in settings GUI instead
  Bugfixes:
    - Fixed a crash when an object was added to the favorites list, then removed from the game on configuration changed
    - Fixed that quick reference windows would not update their contents when settings were changed
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2020-12-06
  Changes:
    - Clicking a crafter to give a blueprint of it will use the blueprint clipboard intead of a one-off item
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2020-11-23
  Changes:
    - Updated to Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2020-11-15
  Changes:
    - Updated deprecated require path for flib data-util module
    - Updated German translation (by Moonsilence)